Team finder homepage frontend mostly complete. Add functionality + figure out overflow issue

--- a/src/front-end/css/dashboard/dashboard.module.scss
+++ b/src/front-end/css/dashboard/dashboard.module.scss
@@ -1,11 +1,15 @@
 .profile {
   display: flex;
+  justify-content: flex-end;
+
   .circle {
     position: relative;
     width: 70px;
     height: 70px;
     border-radius: 50%;
     background: #2A586E;
+    margin-top: 50px;
+    margin-right: 115px;
   } 
   .pfp {
     width: 55px;
@@ -13,7 +17,7 @@
     border-radius: 50%;
     background-color: grey;
     position: absolute;
-    z-index: 999;
+    z-index: 998;
     top: 12%;
     left: 12%;
   }
@@ -27,33 +31,108 @@
   .myProfile {
     color: white;
     position: absolute;
-    width: 120px;
+    width: 100px;
     font-weight: 600;
-    transform: translate(60%, 100%);
+    transform: translate(70%, 100%);
     // border: 1px solid black;
     margin-bottom: 0;
-    z-index: 999;
+    z-index: 998;
   }
 }
-
 .profile:hover {
   cursor: pointer;
 }
 
-.container {
-  width: 100%;
+.mainContent {
+  margin-top: 50px;
+  position: absolute;
   display: flex;
-  .dashboard {
-    width: 500px;
-    min-height: 100%;
-    background-color: #2A586E;
-    top: 0;
-    right: 0;
-    position: absolute;
-    // display: none;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  align-items: center;
+  color: white;
+  .text {
+    width: 90%;
+    .hi {
+      font-weight: 600;
+      font-size: 32pt;
+    }
+    .welcome {
+      font-weight: 600;
+      margin-top: 35px;
+      font-size: 40pt;
+    }
+    .meet {
+      font-weight: 600;
+      color: #9EE7E5;
+      font-size: 16pt;
+    }
   }
-  .showDashboard {
-    // display: block;
-  }
+
 }
 
+
+.dashboard {
+  width: 500px;
+  min-height: 100%;
+  background-color: #2A586E;
+  top: 0;
+  right: 0;
+  position: absolute;
+  display: none;
+  z-index: 998;
+}
+.showDashboard {
+  display: block;
+}
+
+
+.teamButtonCont {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin-top: 35px;
+  .teamButtons {
+    display: flex;
+    flex-direction: column;
+    width: 48%;
+    height: 400px;
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.16);
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+    }
+    .findJoinTeam {
+      width: 100%;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #074967;
+      .findJoinTeamBtn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90%;
+        height: 35px;
+        letter-spacing: 1px;
+        border-radius: 20px;
+        border: solid 2px #9EE7E5;
+        color: #9EE7E5;
+        font-weight: 600;
+      }
+      .findJoinTeamBtn:hover {
+        cursor: pointer;
+        color: white;
+        border: solid 2px white;
+      }
+      .findJoinTeamBtn:active {
+        color: #00425A;
+        background-color: #9EE7E5;
+        border: solid 2px #9EE7E5;
+      }
+    }
+  }
+}
