--- a/src/front-end/css/dashboard/dashboardpanel.module.scss
+++ b/src/front-end/css/dashboard/dashboardpanel.module.scss
@@ -4,6 +4,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  .x {
+    position: absolute;
+    width: 30px;
+    top: 25px;
+    right: 25px;
+  }
+  .x:hover {
+    cursor: pointer;
+  }
   .text {
     margin-top: 35px;
     margin-bottom: 10px;
@@ -56,6 +66,6 @@
     width: 450px;
     height: 100px;
     background-color: #043B54;
-    border-radius: 10px
+    border-radius: 10px;
   }
 }
