--- a/src/front-end/css/dashboard/editdashboard.module.scss
+++ b/src/front-end/css/dashboard/editdashboard.module.scss
@@ -1,10 +1,20 @@
 .container {
-  margin-top: 88px;
+  margin-top: 120px;
   padding: 20px;
   display: flex;
   width: 500px;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  .x {
+    position: absolute;
+    width: 30px;
+    top: 0;
+    right: 25px;
+  }
+  .x:hover {
+    cursor: pointer;
+  }
   .pfp {
     width: 200px;
     height: 200px;
